--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/GridSearchSVM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.libsvm.jar=libsvm.jar
+file.reference.weka-3.6.6.jar=weka-3.6.6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.libsvm.jar}:\
+    ${file.reference.weka-3.6.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
