--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.libsvm.jar=libsvm.jar
 file.reference.weka-3.6.6.jar=weka-3.6.6.jar
+file.reference.weka.jar=weka.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.libsvm.jar}:\
-    ${file.reference.weka-3.6.6.jar}
+    ${file.reference.weka-3.6.6.jar}:\
+    ${file.reference.weka.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
